--- a/Ma-Norn-Duay-Gun-Mai/Properties/Resources.resx
+++ b/Ma-Norn-Duay-Gun-Mai/Properties/Resources.resx
@@ -118,17 +118,17 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="zTable" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\zTable.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Bed_blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Bed_blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Bed1_blue_h" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Bed1_blue_h.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Lamp3_red_h" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Lamp3_red_h.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="zAirCon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\zAirCon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Bed_blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Bed_blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Bed_cream" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Bed_cream.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="window3_pink" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\window3_pink.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -139,8 +139,17 @@
   <data name="Bed_grey" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Bed_grey.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Bed2_cream_h" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Bed2_cream_h.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Lamp4_yellow_h" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Lamp4_yellow_h.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="window1_blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\window1_blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="up" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\up.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="window1_blue_h" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\window1_blue_h.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -150,9 +159,6 @@
   </data>
   <data name="window4_red_h" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\window4_red_h.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Lamp1_brown1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Lamp1_brown1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Rug_red" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Rug_red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -184,14 +190,17 @@
   <data name="window2_green" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\window2_green.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="aircon_h" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\aircon_h.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Lamp_red" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Lamp_red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Window_red" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Window_red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Lamp3_red" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Lamp3_red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Lamp3_red_h" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Lamp3_red_h.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="window2_green_h" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\window2_green_h.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -199,20 +208,17 @@
   <data name="Rug_green" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Rug_green.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="up" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\up.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="Lamp2_pink_h" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Lamp2_pink_h1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Bed2_cream_h" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Bed2_cream_h.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Lamp1_brown1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Lamp1_brown1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Ward_normal" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Ward_normal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Ward1_kid" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Ward1_kid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Bed1_blue1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Bed1_blue1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Lamp1_brown" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Lamp1_brown.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -220,14 +226,14 @@
   <data name="Bed_pink" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Bed_pink.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Bed_cream" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Bed_cream.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Ward1_kid" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Ward1_kid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="DressTable_brown" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\DressTable_brown.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="aircon_h" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\aircon_h.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Lamp3_red" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Lamp3_red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Bed_kid" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Bed_kid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -235,8 +241,8 @@
   <data name="down" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\down.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="zAirCon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\zAirCon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Ward2_mirror" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Ward2_mirror.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Bed2_cream" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Bed2_cream.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -244,11 +250,14 @@
   <data name="Lamp1_brown_h" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Lamp1_brown_h.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Ward3_plain" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Ward3_plain.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="window1_blue1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\window1_blue1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Bed1_blue1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Bed1_blue1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="zTable" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\zTable.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Bed3_grey_h" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Bed3_grey_h.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -262,7 +271,7 @@
   <data name="window4_red" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\window4_red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Lamp4_yellow_h" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Lamp4_yellow_h.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Ward4_white" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Ward4_white.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
